feat: 글쓰기 페이지의 기능 구현
-프론트엔드 글쓰기 페이지를 form으로 작업했습니다.
-백엔드와 SQlite를 연동해서 이미지와 데이터를 업로드하는 기능을 구현했습니다!

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -38,7 +38,7 @@
     </header>
 
     <main>
-      <div class="item-list">
+      <!-- <div class="item-list">
         <div class="item-list__img">
           <img
             src="https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcSw2Ihe1eIIBbHAgWV9gfH48RbnpNrbIUzxhQ&usqp=CAU"
@@ -115,8 +115,8 @@
           <div class="item-list__info-meta">연희동 1일 전</div>
           <div class="item-list__info-price">10억원</div>
         </div>
-      </div>
-      <div class="write-btn">+ 글쓰기</div>
+      </div> -->
+      <a class="write-btn" href="write.html">+ 글쓰기</a>
     </main>
 
     <footer>
@@ -154,5 +154,6 @@
       </div>
     </footer>
     <div class="media-info-msg">화면 사이즈를 줄여주세요!</div>
+    <script src="index.js"></script>
   </body>
 </html>
